Change background on mobile correctly try 2

--- a/papi/style.css
+++ b/papi/style.css
@@ -1,7 +1,7 @@
 
 body{
     background-image: url("assets/images/6.jpg");
-    background-size: 100% 100%;
+    background-size:cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: bottom; 
@@ -9,7 +9,7 @@ body{
 
 .bg_mobile{
     background-image: url("assets/images/7.jpg");
-    background-size: 100% 100%;
+    background-size:cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: bottom; 
